code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block-6.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---

    fn foo() {}

    fn baz() {}
 /* ^dst */

    fn bar() {}
 /* ^src */


New src start: 22
New dst start: 5
