code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block-7.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---

    mod m2 {
        fn bar() {}
    }

    mod m3 {
/*  ^dst */
        fn baz() {}
    }

    mod m1 {
/*  ^src */
        fn foo() {}
    }


New src start: 149
New dst start: 45
