code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block-8.snap
---
source: code-blocks/tests/rust/main.rs
expression: "code_blocks::move_block(src_block, dst_item,\n        r#\"\n    mod m1 {\n/*  ^dst */\n        fn foo() {}\n    }\n\n    mod m2 {\n        fn bar() {}\n    }\n\n    mod m3 {\n/*  ^src */\n        fn baz() {}\n    }\n\"#,\n        Some(check_fn), false).unwrap()"
---

    mod m1 {
/*  ^dst */
        fn foo() {}
    }

    mod m3 {
/*  ^src */
        fn baz() {}
    }

    mod m2 {
        fn bar() {}
    }

